# elephant-diary

./: 2022-09-26_01-29-25  Cargo.toml  README.md  example.diary  notes.jn  test elf__poll  test1  test2
src/: app.rs  commit.rs  config.rs  cursor.rs  gapbuffer.rs  input.rs  loop.rs  main.rs  new  util.rs  wrap.rs
src/app/: app.rs
src/text/: editarea.rs  editcursor.rs  gapbuffer.rs  mod.rs  word.rs
src/ui/: edit.rs  elphy.rs  help.rs  mod.rs
