[package]
name = "dated-diary"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19" }
tui = "0.19"
crossterm = "0.25"
unicode-width = "0.1.9"
unicode-linebreak = "0.1.2"
textwrap = "0.15"
